maybe temporary fix for a overlaping text on small displays, maybe not so temporary

--- a/index.css
+++ b/index.css
@@ -2,22 +2,45 @@ header { text-align: center;
 	float: center; }
 input { border: none;
 	height: 2em;
-	width: 100%; }
+	width: 100%;
+	min-width: 6em;
+}
 #container {
 	width: 100%;
 	height: 100%;
+	display: table;
 }
 #one {
 	width: 9%;
+	height: 30%;
 	float:left;
 	font-family: Arial, Helvatica, sans-serif;
 	margin-right: 1%;
+	overflow: hidden;
+	min-width: 6em;
 }
 #two {
 	width: 90%;
-	float:right;
+	height: 100%;
+	float:left;
 	font-family: Arial, Helvatica, sans-serif;
+	overflow: hidden;
 }
+
+@media (max-width:1500px){
+        #one {
+	    width: 100%;
+	    float: center;
+	    font-family: Arial, Helvatica, sans-serif;
+        }
+
+        #two {
+            width: 100%;
+	    float: center;
+	    font-family: Arial, Helvatica, sans-serif;
+        }
+}
+
 input[type=submit] {
 	cursor: pointer;
 }
